--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,32 @@
 server {
-    listen 81;
+    listen 85;
     index index.php index.html;
     root /var/www/api.invest/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 86;
+    index index.php index.html;
+    root /var/www/frontend.invest/public;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
