--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
-    listen 85;
+    listen 8000;
     index index.php index.html;
-    root /var/www/api.invest/public;
+    root /var/www/api_invest/public;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -24,9 +24,9 @@ server {
 }
 
 server {
-    listen 86;
+    listen 8001;
     index index.php index.html;
-    root /var/www/frontend.invest/public;
+    root /var/www/frontend_invest/public;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -49,9 +49,59 @@ server {
 }
 
 server {
-    listen 87;
+    listen 8002;
     index index.php index.html;
-    root /var/www/rangdong;
+    root /var/www/api-web-invest;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8003;
+    index index.php index.html;
+    root /var/www/website_invest/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8004;
+    index index.php index.html;
+    root /var/www/upload_service/public;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
