--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -122,3 +122,178 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
+server {
+    listen 8005;
+    index index.php index.html;
+    root /var/www/web-rent/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php8:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8006;
+    index index.php index.html;
+    root /var/www/cms-rent/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php8:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8007;
+    index index.php index.html;
+    root /var/www/api-rent/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php8:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8008;
+    index index.php index.html;
+    root /var/www/api-gdtg/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8009;
+    index index.php index.html;
+    root /var/www/web-boongmart/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php8:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8010;
+    index index.php index.html;
+    root /var/www/story/public;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php8:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
+
+server {
+    listen 8011;
+    index index.php index.html;
+    root /var/www/land-fagi;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
