--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,44 +1,73 @@
-FROM php:7.4-fpm
+FROM php:7.3-fpm
 
+ENV MSSQL_VERSION=18
+ENV ACCEPT_EULA=Y
 # Install package
-RUN apt-get update
-RUN apt-get install vim git zip unzip libpng-dev libzip-dev librabbitmq-dev libicu-dev cron -y
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    libpng-dev \
+    libonig-dev \
+    libxml2-dev \
+    zip \
+    unzip \
+    gnupg \
+    libltdl-dev \
+    libpng-dev \
+    libzip-dev \
+    librabbitmq-dev \
+    libicu-dev \
+    openssl
 
-RUN docker-php-ext-install pdo_mysql zip bcmath gd
+RUN apt-get update && apt-get install -y libzip-dev zip && docker-php-ext-install zip
+RUN pecl install redis && docker-php-ext-enable redis
+# Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Imap
-RUN apt-get install libkrb5-dev libc-client-dev -y
-RUN docker-php-ext-configure imap --with-kerberos --with-imap-ssl
-RUN docker-php-ext-install imap
+# Install PHP extensions
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd mysqli
 
-# Intl
-RUN apt-get install zlib1g-dev libicu-dev -y
-RUN docker-php-ext-configure intl
-RUN docker-php-ext-install intl
+# Cài đặt Homebrew
+# Install Homebrew without sudo check
+# RUN /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh --no-sudo)"
+# Thêm Microsoft repository
+# RUN brew tap microsoft/mssql-release https://github.com/Microsoft/homebrew-mssql-release
 
-# gnupg
-RUN apt-get install -y gnupg2 gnupg gnupg1 libgpgme11-dev
-RUN pecl install gnupg
-RUN docker-php-ext-enable gnupg
+# Cập nhật Homebrew
+# RUN brew update
 
-# Excel
-RUN apt-get install zlib1g-dev libpng-dev libxml2-dev -y
-RUN docker-php-ext-install zip
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install xml
+# Chấp nhận EULA và cài đặt ODBC Driver và SQL Server tools
+# RUN HOMEBREW_ACCEPT_EULA=Y brew install msodbcsql${MSSQL_VERSION} mssql-tools${MSSQL_VERSION}
 
-# Timezone
-RUN echo "date.timezone = Asia/Ho_Chi_Minh" >> /usr/local/etc/php/php.ini
-RUN echo "upload_max_filesize = 1024M" >> /usr/local/etc/php/php.ini
-RUN echo "post_max_size = 1024M" >> /usr/local/etc/php/php.ini
-RUN echo "error_log = /var/log/php/php-fpm.log" >> /usr/local/etc/php/php.ini
-RUN echo "log_errors = On" >> /usr/local/etc/php/php.ini
-RUN echo "log_level = alert" >> /usr/local/etc/php/php.ini
-RUN echo "output_buffering = 4096" >> /usr/local/etc/php/php.ini
-RUN echo "memory_limit = 4096M" >> /usr/local/etc/php/php.ini
+# RUN apt-get update && apt-get -y install unixodbc unixodbc-dev libltdl-dev
+# Install Microsoft ODBC Driver
+# RUN apt-get update && \
+#     apt-get install -y \
+#         curl \
+#         lsb-release \
+#         ca-certificates \
+#         apt-transport-https && \
+#     curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+#     curl -fsSL https://packages.microsoft.com/config/ubuntu/20.04/prod.list | tee /etc/apt/sources.list.d/mssql-release.list && \
+#     apt-get update && \
+#     apt-get install -y \
+#         msodbcsql${MSSQL_VERSION} && \
+#     apt-get install -y --no-install-recommends mssql-tools${MSSQL_VERSION} && \
+#     echo "export PATH=\$PATH:/opt/mssql-tools${MSSQL_VERSION}/bin" >> /root/.bashrc && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
-# Composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+# RUN pecl install sqlsrv-5.9.0 pdo_sqlsrv-5.9.0 && docker-php-ext-enable sqlsrv pdo_sqlsrv
+RUN apt-get update && apt-get install -y cron
+RUN echo "upload_max_filesize = 10M" >> /usr/local/etc/php/conf.d/uploads.ini
+RUN echo "post_max_size = 10M" >> /usr/local/etc/php/conf.d/uploads.ini
+# RUN echo "extension = sqlsrv.so" >> /usr/local/etc/php/conf.d/sqlsrv.ini
+# RUN echo "extension = pdo_sqlsrv.so" >> /usr/local/etc/php/conf.d/sqlsrv.ini
+# RUN echo "openssl.cafile=/etc/ssl/certs/ca-certificates.crt" >> /usr/local/etc/php/php.ini
+# RUN echo "\n[default_conf]\nssl_conf = ssl_sect\n\n[ssl_sect]\nsystem_default = system_default_sect\n\n[system_default_sect]\nMinProtocol = TLSv1\nCipherString = DEFAULT@SECLEVEL=0" >> /etc/ssl/openssl.cnf
+
+# Get latest Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Permission
 RUN chmod -R 777 /var/www/
@@ -46,5 +75,6 @@ RUN chmod -R 777 /var/www/
 WORKDIR /var/www
 
 CMD ["php-fpm"]
+
 
 EXPOSE "9000"
