--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
-    listen 8000;
+    listen 8005;
     index index.php index.html;
-    root /var/www/api_invest/public;
+    root /var/www/xnt-wsl/public;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -15,82 +15,7 @@ server {
     send_timeout 300;
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8001;
-    index index.php index.html;
-    root /var/www/frontend_invest/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8002;
-    index index.php index.html;
-    root /var/www/api-web-invest;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8003;
-    index index.php index.html;
-    root /var/www/website_invest/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
+        fastcgi_pass php8-wsl:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -101,35 +26,10 @@ server {
 server {
     listen 8004;
     index index.php index.html;
-    root /var/www/upload_service/public;
+    root /var/www/apos/public;
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8005;
-    index index.php index.html;
-    root /var/www/web-rent/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access_apos.log;
+    error_log /var/log/nginx/error_apos.log;
 
     location / {
         try_files $uri /index.php?$args;
@@ -140,157 +40,7 @@ server {
     send_timeout 300;
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8006;
-    index index.php index.html;
-    root /var/www/cms-rent/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8007;
-    index index.php index.html;
-    root /var/www/api-rent/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8008;
-    index index.php index.html;
-    root /var/www/api-gdtg/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8009;
-    index index.php index.html;
-    root /var/www/web-boongmart/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8010;
-    index index.php index.html;
-    root /var/www/story/public;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
-}
-
-server {
-    listen 8011;
-    index index.php index.html;
-    root /var/www/land-fagi;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        try_files $uri /index.php?$args;
-    }
-    client_body_timeout   32;
-    client_header_timeout 32;
-    keepalive_timeout 90;
-    send_timeout 300;
-    location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php7:9000;
+        fastcgi_pass php7-wsl:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
