--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,8 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
     }
 }
 
