--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -49,3 +49,28 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
+server {
+    listen 8006;
+    index index.php index.html;
+    root /var/www/socket-laravel/public;
+
+    access_log /var/log/nginx/access_apos.log;
+    error_log /var/log/nginx/error_apos.log;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
+    client_body_timeout   32;
+    client_header_timeout 32;
+    keepalive_timeout 90;
+    send_timeout 300;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php7-wsl:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+}
